--- a/.github/workflows/sampleapp-cd-composite.yml
+++ b/.github/workflows/sampleapp-cd-composite.yml
@@ -35,6 +35,9 @@ jobs:
   debug:
     name: debug
     runs-on: ubuntu-latest
+    outputs: 
+      terraform_vars: ${{ steps.tf_vars.outputs.terraform_vars }}
+
     steps:
       - name: Debug Environment Variables
         shell: bash
@@ -43,11 +46,24 @@ jobs:
           echo "AZURE_TENANT_ID is: ${{ vars.AZURE_TENANT_ID_DEV }}"
           echo "AZURE_SUBSCRIPTION_ID is: ${{ vars.AZURE_SUBSCRIPTION_ID_DEV }}"
           echo "AZURE_CLIENT_SECRET is set: ${{ secrets.AZURE_CLIENT_SECRET_DEV != '' }}"
+      - name: Prepare Terraform Variables
+        id: tf_vars
+        run: |
+          # Build JSON object with proper escaping
+          terraform_vars=$(jq -n \
+            --arg sql_login "${{ vars.sql_admin_login_dev }}" \
+            --arg sql_password "${{ secrets.sql_admin_password_dev }}"
+            '{
+              sql_admin_login: $sql_login,
+              sql_admin_password: $sql_password
+            }')
+          
+          echo "terraform_vars=$terraform_vars" >> $GITHUB_OUTPUT
 
   call_sequential_cd:
     name: SampleApp CD
     uses: InwardEcho/workflow-templates/.github/workflows/sequential-cd-workflow-composite.yml@main
-
+    needs: [debug]
     with:
       # Core inputs from workflow_dispatch
       source_run_id: 11
@@ -60,11 +76,7 @@ jobs:
       # Application-specific parameters
       # db_migration_project_path: 'src/SampleApp.WebApp/SampleApp.WebApp.csproj'
       terraform_directory: 'infra'
-      terraform-vars: |
-        {
-          "sql_admin_login": "${{ vars.sql_admin_login_dev }}",
-          "sql_admin_password": "${{ secrets.sql_admin_password_dev }}"
-        }
+      terraform-vars: ${{ needs.debug.outputs.terraform_vars }}
       terraform-var-file: dev.tfvars
 
       # azure_app_name: 'sampleapp'
