--- a/.github/workflows/sampleapp-cd-composite.yml
+++ b/.github/workflows/sampleapp-cd-composite.yml
@@ -83,7 +83,7 @@ jobs:
       
 
       # Application-specific parameters
-      # db_migration_project_path: 'src/SampleApp.WebApp/SampleApp.WebApp.csproj'
+      db_migration_project_path: 'src/SampleApp.WebApp/SampleApp.WebApp.csproj'
       terraform_directory: 'infra'
       terraform-vars: ${{ needs.debug.outputs.terraform_vars }}
       terraform-var-file: dev.tfvars
