--- a/.github/workflows/sampleapp-ci.yml
+++ b/.github/workflows/sampleapp-ci.yml
@@ -14,5 +14,5 @@ permissions:
 jobs:
   call_ci:
     name: Call Workflow
-    uses: InwardEcho/workflow-templates/.github/workflows/fed2.yml@main
+    uses: InwardEcho/workflow-templates/.github/workflows/fed.yml@feature/test
     secrets: inherit
