--- a/.github/workflows/sampleapp-ci.yml
+++ b/.github/workflows/sampleapp-ci.yml
@@ -11,18 +11,7 @@ permissions:
   id-token: write
   contents: read
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    environment: dev
-    steps:
-      - name: Azure login
-        uses: azure/login@v1
-        with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID_PROD }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID_PROD }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID_PROD }}
-      
-      - name: Deploy resources
-        run: |
-          # Your deployment commands here
-          az group list
+  call_ci:
+    name: Call Workflow
+    uses: InwardEcho/workflow-templates/.github/workflows/fed.yml@main
+    secrets: inherit
